cli/kubernetes/istio/telemetry/tracing/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15032
        name: http-tracing
        protocol: HTTP
      hosts:
        - "telemetry.edoxa.gg"
