cli/kubernetes/istio/telemetry/tracing/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: istio-system
spec:
  hosts:
    - "telemetry.edoxa.gg"
  gateways:
    - tracing-gateway
  http:
    - match:
        - port: 15032
      route:
        - destination:
            host: tracing
            port:
              number: 80
